--- a/layout-v2/content/css/layout.css
+++ b/layout-v2/content/css/layout.css
@@ -17,7 +17,8 @@ html
 }
 html, body
 {
-    height: 100%;
+    min-width: 1400px;
+
     font: normal 14px Droid Sans, Arial, Verdana;
     margin: 0em;
     background: #111;
@@ -26,6 +27,10 @@ html, body
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+body
+{
+    height: 100%;
 }
 .clear
 {
@@ -53,8 +58,7 @@ html, body
 .pwrapper
 {
     position: relative;
-    background: red;
-    width: 82em;
+    width: 65em;
     height: 100%;
     margin: auto;
     z-index: 2;
@@ -84,6 +88,7 @@ html, body
 
 .wrapper .content
 {
+    margin-top: 3em;
     color: #333;
     font-weight: normal;
     overflow: hidden;
@@ -157,9 +162,9 @@ html, body
 
 .sidebar
 {
-    position: fixed;
+    position: absolute;
     top: 1em;
-    left: 1em;
+    left: -16em;
     width: 15em;
 }
 
@@ -286,8 +291,10 @@ html, body
     width: 100%;
     text-align: center;
     height: 4.3em;
+    border-top: solid 0.5em #333;
+    margin-top: 1em;
 }
-.footer-icons a.icon
+.footer-icons a.ficon
 {
     display: inline-block;
     text-indent: -9999em;
