Progress with moving articles/projects to a document module. Need to keep this project from using a DB.

--- a/limpygnome-war/src/main/webapp/resources/content/css/content/elements.css
+++ b/limpygnome-war/src/main/webapp/resources/content/css/content/elements.css
@@ -61,10 +61,20 @@ main > article
     border-right: none;
 }
 
+/*
+    Headers
+*/
+
 main h1
 {
     margin: 0.5em;
     color: #333;
+}
+
+main h2
+{
+    margin: 0.5em;
+    color: #666;
 }
 
 
