--- a/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
+++ b/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
@@ -50,8 +50,9 @@ main .fr
     float: right;
 }
 
-main section,
-main article
+main > section,
+main > article,
+main div > article
 {
     color: #333;
     border-radius: 0.4em;
@@ -65,6 +66,14 @@ main article
 /*
     Headers
 */
+
+main h1,
+main h2,
+main h3,
+main h4
+{
+    clear: both;
+}
 
 main h1
 {
@@ -117,11 +126,42 @@ main .button:focus
 .thumbnail
 {
     float: right;
-    margin: 0em 0em 1em 1em;
+    margin: 0em 1em 0.5em 1em;
 }
-.timeline .thumbnail img
+.thumbnail img
 {
-    max-width: 7em;
-    max-height: 7em;
+    max-width: 8em;
+    max-height: 8em;
     border-radius: 0.4em;
+}
+
+/*
+    Data table
+*/
+
+table.data
+{
+    margin: 1em auto;
+    border-radius: 0.5em;
+    background: #EEE;
+    border: solid 0.1em #BBB;
+}
+
+table.data th
+{
+    text-align: left;
+    color: #666;
+}
+
+table.data th,
+table.data td
+{
+    padding: 0.3em;
+    border: solid 0.1em #DDD;
+}
+
+table.data tr:nth-child(odd) th,
+table.data tr:nth-child(odd) td
+{
+    background: #DDD;
 }
