--- a/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
+++ b/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
@@ -9,7 +9,7 @@ main a:hover, main a:focus
 }
 main p
 {
-    margin: 0.5em;
+    margin: 0.5em 1em;
     font-size: 1.1em;
 }
 main p img
@@ -80,11 +80,23 @@ main h1
     margin: 0.5em;
     color: #333;
 }
+main article section h1
+{
+    font-size: 1.5em;
+    border-bottom: solid 0.1em #999;
+    padding: 0.6em 0.2em 0.2em 0.2em;
+}
 
 main h2
 {
     margin: 0.5em;
     color: #666;
+}
+main article section h2
+{
+    font-size: 1.5em;
+    padding: 0.1em 0.2em;
+    font-weight: normal;
 }
 
 
