--- a/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
+++ b/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
@@ -80,7 +80,8 @@ main h1
     margin: 0.5em;
     color: #333;
 }
-main article section h1
+main article > h1,
+main section > h1
 {
     font-size: 1.5em;
     border-bottom: solid 0.1em #999;
@@ -92,7 +93,8 @@ main h2
     margin: 0.5em;
     color: #666;
 }
-main article section h2
+main article h2,
+main section h2
 {
     font-size: 1.5em;
     padding: 0.1em 0.2em;
