More progress with articles, started binary clock project docuemnt.

--- a/limpygnome-war/src/main/webapp/resources/content/layout/layout.css
+++ b/limpygnome-war/src/main/webapp/resources/content/layout/layout.css
@@ -3,12 +3,12 @@
 */
 ::selection
 {
-    background: #06C;
+    background: #333;
     color: #999;
 }
 ::-moz-selection
 {
-    background: #06C;
+    background: #333;
     color: #999;
 }
 html
