--- a/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
+++ b/limpygnome-war/src/main/webapp/resources/content/layout/elements.css
@@ -56,7 +56,7 @@ main div > article
 {
     color: #333;
     border-radius: 0.4em;
-    background: rgba(221,221,221,0.9);
+    background: #CCC;
 
     border: solid 0.5em #999;
     border-left: none;
@@ -85,7 +85,15 @@ main section > h1
 {
     font-size: 1.5em;
     border-bottom: solid 0.1em #999;
-    padding: 0.6em 0.2em 0.2em 0.2em;
+    padding: 0em 0.2em 0.2em 0.2em;
+}
+
+/* Ensure headers, which are not first on the page, have padding above them. */
+main article h1:nth-child(n+3),
+main section h1:nth-child(n+2),
+main section:nth-child(n+3) h1
+{
+    padding-top: 0.6em;
 }
 
 main h2
@@ -137,16 +145,17 @@ main .button:focus
     Thumbnail element
 */
 
-.thumbnail
+.thumbnail-image
 {
     float: right;
     margin: 0em 1em 0.5em 1em;
 }
-.thumbnail img
+.thumbnail-image img
 {
     max-width: 8em;
     max-height: 8em;
-    border-radius: 0.4em;
+    border-radius: 0.3em;
+    box-shadow: 0em 0em 1em #AAA;
 }
 
 /*
@@ -178,4 +187,35 @@ table.data tr:nth-child(odd) th,
 table.data tr:nth-child(odd) td
 {
     background: #DDD;
+}
+
+/*
+    Embedding large images within a link within a paragraph - <p><a><img .. /></a></p>
+*/
+p.large-image
+{
+    text-align: center;
+    margin: 1em;
+}
+p.large-image a
+{
+    text-decoration: none;
+}
+p.large-image a > img
+{
+    max-width: 70%;
+    max-height: 40%;
+    border-radius: 0.3em;
+    box-shadow: 0em 0em 1em #AAA;
+
+}
+
+/*
+    Code container
+*/
+.code
+{
+    margin: 0.5em 1em;
+    border: solid 0.1em #999;
+    background: #FFF;
 }
