--- a/limpygnome-war/src/main/webapp/resources/content/pages/documents.css
+++ b/limpygnome-war/src/main/webapp/resources/content/pages/documents.css
@@ -88,3 +88,19 @@
 {
     text-decoration: none;
 }
+
+/*
+    Header for all documents (articles/projects)
+*/
+
+.document header
+{
+    border-bottom: solid 0.3em #BBB;
+    margin-bottom: 0.5em;
+    background: #EEE;
+}
+
+.document header h1
+{
+    display: inline-block;
+}
