--- a/limpygnome-war/src/main/webapp/resources/content/pages/timeline.css
+++ b/limpygnome-war/src/main/webapp/resources/content/pages/timeline.css
@@ -12,6 +12,7 @@
     margin-left: 1.5em;
     padding: 0.5em;
     margin-bottom: 2em;
+    box-shadow: 0em 0em 1em #BBB;
 }
 
 .timeline .item:before
