Footer and WCAG friendly colour contrasting.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -41,6 +41,8 @@
                             Curriculum Vitae
                         </a>
                     </li>
+                </ul>
+                <ul>
                     <li>
                         <a href="/projects">
                             <span class="icon-lab"></span>
@@ -88,6 +90,23 @@
         </div>
 
         <footer>
+
+            <ul>
+                <li>
+                    <a href="https://opensource.org/licenses/MIT">
+                        MIT License
+                    </a>
+                </li>
+                <li>
+                    WCAG 2.0 AA Friendly
+                </li>
+                <li>
+                    <a href="https://github.com/limpygnome/limpygnome-dot-com">
+                        Fork Me
+                    </a>
+                </li>
+            </ul>
+
             <a title="Github" href="https://www.github.com/limpygnome">
                 Github
             </a>
@@ -106,6 +125,7 @@
             <a title="E-mail" href="mailto:limpygnome@gmail.com" target="_blank">
                 E-mail
             </a>
+
         </footer>
 
     </body>
